fix overflow on smaller screens

--- a/src/app/studies/list/list.component.scss
+++ b/src/app/studies/list/list.component.scss
@@ -2,3 +2,8 @@
     display: flex;
 	flex-wrap: wrap;
 }
+
+::ng-deep .mat-list .mat-list-item .mat-line{
+    word-wrap: break-word;
+   white-space: pre-wrap;
+}
